// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FloatInput /> accepts a valid float value 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter decimal"
  type="text"
  value="3.2"
/>
`;

exports[`<FloatInput /> with a custom className 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field custom-class"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter decimal"
  type="text"
  value=""
/>
`;

exports[`<FloatInput /> with no props 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter decimal"
  type="text"
  value=""
/>
`;

exports[`Float Input with custom placeholder 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Test placeholder"
  type="text"
  value=""
/>
`;

exports[`Float input with an invalid float 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field mui-mi-input-field-has-error"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter decimal"
  type="text"
  value="3.2aa"
/>
`;

exports[`Float input with required prop 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field mui-mi-input-field-has-error"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter decimal"
  required={true}
  type="text"
  value=""
/>
`;
